--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "sass": "^1.58.0",
+    "vite-plugin-svgr": "^2.4.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
